# clinical-rs

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  RELEASE_NOTES.md  SECURITY.md  TODO.md  cliff.toml  deny.toml  release.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml  msrv.yml  release.yml
crates/clinical-tasks/: CHANGELOG.md  Cargo.toml  README.md
crates/clinical-tasks/benches/: windowing.rs
crates/clinical-tasks/examples/: custom_task.rs
crates/clinical-tasks/src/: code_grouping.rs  features.rs  lib.rs  types.rs  windowing.rs
crates/clinical-tasks/src/longevity/: clock.rs  mod.rs  senescence.rs  signals.rs
crates/clinical-tasks/tests/: synthetic_patients.rs
crates/medcodes/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/medcodes/benches/: lookup.rs
crates/medcodes/data/: DXCCSR-ChangeLog-v20251-v20261.xlsx  DXCCSR-Reference-File-v2026-1.xlsx  DXCCSR_Mapping_Program_v2026-1.sas
crates/medcodes/data/Table and Index/: icd10cm_drug_neoplasm.xsd
crates/medcodes/data/atc/: sample_codes.csv
crates/medcodes/data/ccs/: icd10cm_mappings.csv  icd9cm_mappings.csv  sample_categories.csv
crates/medcodes/data/icd9cm/: sample_codes.csv
crates/medcodes/data/ndc/: ndc_to_atc_mappings.csv  ndc_to_rxnorm_mappings.csv  sample_codes.csv
crates/medcodes/src/: icd10.rs  lib.rs  ndc_to_atc.rs  ndc_to_rxnorm.rs  types.rs
crates/medcodes/src/atc/: mod.rs
crates/medcodes/src/ccs/: icd10cm_integration_tests.rs  integration_tests.rs  mod.rs  normalization_tests.rs
crates/medcodes/src/ccsr/: mod.rs
crates/medcodes/src/icd10/: mod.rs
crates/medcodes/src/icd9/: mod.rs
crates/medcodes/src/ndc/: mod.rs
crates/medcodes/tests/: atc_comprehensive_tests.rs  atc_tests.rs  comprehensive_tests.proptest-regressions  comprehensive_tests.rs  icd9cm_tests.rs  known_answer_tests.rs  ndc_tests.rs  snapshot_tests.rs
crates/medcodes/tests/snapshots/: snapshot_tests__snapshot_tests__ancestors_E119.snap  snapshot_tests__snapshot_tests__ancestors_error_.snap  snapshot_tests__snapshot_tests__ancestors_error_A.snap  snapshot_tests__snapshot_tests__ancestors_error_INVALID.snap  snapshot_tests__snapshot_tests__ancestors_error_X999.snap  snapshot_tests__snapshot_tests__ancestors_error_XYZ.snap  snapshot_tests__snapshot_tests__children_E119.snap  snapshot_tests__snapshot_tests__descendants_J45909.snap  snapshot_tests__snapshot_tests__error_data.snap  snapshot_tests__snapshot_tests__error_hierarchy.snap  snapshot_tests__snapshot_tests__error_invalid_format.snap  snapshot_tests__snapshot_tests__error_no_mapping.snap  snapshot_tests__snapshot_tests__error_not_found.snap  snapshot_tests__snapshot_tests__forward_error_.snap  snapshot_tests__snapshot_tests__forward_error_A.snap  snapshot_tests__snapshot_tests__forward_error_INVALID.snap  snapshot_tests__snapshot_tests__forward_error_X999.snap  snapshot_tests__snapshot_tests__forward_error_XYZ.snap  snapshot_tests__snapshot_tests__lookup_E119.snap  snapshot_tests__snapshot_tests__lookup_I10.snap  snapshot_tests__snapshot_tests__lookup_J45909.snap  snapshot_tests__snapshot_tests__lookup_error_.snap  snapshot_tests__snapshot_tests__lookup_error_A.snap  snapshot_tests__snapshot_tests__lookup_error_INVALID.snap  snapshot_tests__snapshot_tests__lookup_error_X999.snap  snapshot_tests__snapshot_tests__lookup_error_XYZ.snap  snapshot_tests__snapshot_tests__parent_J45909.snap  snapshot_tests__snapshot_tests__reverse_error_.snap  snapshot_tests__snapshot_tests__reverse_error_A.snap  snapshot_tests__snapshot_tests__reverse_error_INVALID.snap  snapshot_tests__snapshot_tests__reverse_error_X999.snap  snapshot_tests__snapshot_tests__reverse_error_XYZ.snap  snapshot_tests__snapshot_tests__system_display_Ccsr.snap  snapshot_tests__snapshot_tests__system_display_Icd10Cm.snap
crates/mimic-etl/: CHANGELOG.md  Cargo.toml  README.md
crates/mimic-etl/benches/: parse.rs
crates/mimic-etl/src/: arrow_writer.rs  code_normalizer.rs  csv_reader.rs  lib.rs  types.rs
scripts/: bump-rc-version.sh  extract_cms_data.sh  setup-dev.sh
