[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.94.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SHA888/clinical-rs"
homepage = "https://github.com/SHA888/clinical-rs"
authors = ["Kresna Sucandra"]
categories = ["science", "data-structures"]
keywords = ["clinical", "healthcare", "arrow", "medical", "ehr"]

[workspace.dependencies]
# Core
arrow = "58.1"
parquet = "58.1"
chrono = { version = "0.4.44", default-features = false, features = ["std", "clock"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"

# ETL
csv = "1.4"
rayon = "1.11"
memmap2 = "0.9.10"

# Code tables
phf = { version = "0.13.1", features = ["macros"] }

# Dev / test
criterion = { version = "0.8.2", features = ["html_reports"] }
proptest = "1"
tempfile = "3"
insta = "1"          # snapshot testing

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unused_results = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
