[package]
name = "clinical-tasks"
version = "0.1.0"
description = "Clinical prediction task windowing — Arrow event streams to ML-ready datasets"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories = ["science", "data-structures"]
keywords = ["clinical", "machine-learning", "arrow", "mortality", "healthcare"]
readme = "README.md"

[dependencies]
arrow = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
medcodes = { version = "0.1.0", path = "../medcodes", optional = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }

[features]
default = ["serde"]
medcodes = ["dep:medcodes"]
serde = ["dep:serde"]

[[bench]]
name = "windowing"
harness = false

[lints]
workspace = true
