[package]
name = "medcodes"
version = "0.1.0"
description = "Medical code ontologies, hierarchy traversal, and cross-system mapping"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
categories = ["science", "data-structures"]
keywords = ["icd10", "medical-codes", "snomed", "loinc", "healthcare"]
readme = "README.md"

[dependencies]
thiserror = { workspace = true }
phf = { workspace = true }
serde = { workspace = true, optional = true }

[build-dependencies]
quick-xml = { version = "0.31", features = ["serialize"] }
csv = "1.3"

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
insta = "1.40"

[features]
default = ["icd10cm"]
icd10cm = []
serde = ["dep:serde"]

[[bench]]
name = "lookup"
harness = false

[lints]
workspace = true
